--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ gunicorn==22.0.0
 
 fastapi==0.115.6
 pydantic==2.10.4
+SQLAlchemy==2.0.36
+psycopg2-binary==2.9.10
+
 
 python-dotenv==1.0.1
 email-validator==2.2.0
